force-app/main/default/objects/Asset_History__c/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <label>Asset Manager</label>
    <referenceTo>Asset_Manager__c</referenceTo>
    <relationshipName>Asset_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>