force-app/main/default/objects/Asset_History__c/fields/Condition_Received__c.field-meta.xml
<CustomField>
    <fullName>Condition_Received__c</fullName>
    <label>Condition Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>