force-app/main/default/objects/Asset_History__c/fields/Date_off_Job__c.field-meta.xml
<CustomField>
    <fullName>Date_off_Job__c</fullName>
    <inlineHelpText>Date the Asset was removed from the job.</inlineHelpText>
    <label>Date off Job (Date)</label>
    <type>Date</type>
</CustomField>