force-app/main/default/objects/Asset_History__c/fields/Date_off_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_off_Job_Time__c</fullName>
    <label>Date off Job (Time)</label>
    <type>DateTime</type>
</CustomField>