force-app/main/default/objects/Asset_History__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>BT Asset History</relationshipLabel>
    <relationshipName>Asset_History</relationshipName>
    <type>Lookup</type>
</CustomField>