force-app/main/default/objects/Asset_History__c/fields/Serviced_By__c.field-meta.xml
<CustomField>
    <fullName>Serviced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who completed the service on this Asset?</inlineHelpText>
    <label>Serviced By</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Asset_History</relationshipName>
    <type>Lookup</type>
</CustomField>